# amazon-price-tracker

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml  tracker.py  tracker_bs4.py  tracker_selenium.py
